--- a/index.html
+++ b/index.html
@@ -8,6 +8,34 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    
+    <div class="display-area">
+        <div class="calc-container">
+            <div class="output-container">
+                <textarea name="output-field" class="output-field">0</textarea>
+            </div>
+            <div class="input-field">
+                <div class="left-input">
+                    <button id="clear">clear</button>
+                    <button class="number" id="7">7</button>
+                    <button class="number" id="8">8</button>
+                    <button class="number" id="9">9</button>
+                    <button class="number" id="4">4</button>
+                    <button class="number" id="5">5</button>
+                    <button class="number" id="6">6</button>
+                    <button class="number" id="1">1</button>
+                    <button class="number" id="2">2</button>
+                    <button class="number" id="3">3</button>
+                    <button class="number" id="0">0</button>
+                </div>
+                <div class="right-input">
+                    <button class="operator" id="add">+</button>
+                    <button class="operator" id="subtract">-</button>
+                    <button class="operator" id="multiply">*</button>
+                    <button class="operator" id="divide">/</button>
+                    <button id="equals">=</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
